debian: don't try to install e2scrub on Hurd
The e2scrub scripts rely on systemd, which isn't present on non-Linux
systems, so they aren't built.  So we need to skip trying to run
dh_installsystemd since it will fail on the Hurd build since the
requisite files aren't being built.

Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/debian/rules
+++ b/debian/rules
@@ -153,9 +153,10 @@ override_dh_installinfo:
 	dh_installinfo -pcomerr-dev ${stdbuilddir}/lib/et/com_err.info
 	dh_installinfo -plibext2fs-dev ${stdbuilddir}/doc/libext2fs.info
 
+ifneq ($(DEB_HOST_ARCH_OS), hurd)
 override_dh_installsystemd:
 	dh_installsystemd -p e2fsprogs --no-restart-after-upgrade --no-stop-on-upgrade e2scrub_all.timer e2scrub_reap.service
-	dh_installsystemd --name=service1
+endif
 
 override_dh_makeshlibs:
 	for i in $(SYMBOL_LIBS); \
