--- a/debian/rules
+++ b/debian/rules
@@ -23,6 +23,11 @@ ifneq ($(filter pkg.e2fsprogs.no-fuse2fs,$(DEB_BUILD_PROFILES)),)
 SKIP_FUSE2FS=yes
 endif
 
+ifneq (,$(filter-out parallel=1,$(filter parallel=%,$(DEB_BUILD_OPTIONS))))
+    NUMJOBS = $(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
+    JOBS = -j$(NUMJOBS)
+endif
+
 COMERR_VERSION ?= $(shell grep ELF_VERSION lib/et/Makefile.in | cut '-d ' -f3)
 SS_VERSION ?= $(shell grep ELF_VERSION lib/ss/Makefile.in | cut '-d ' -f3)
 
@@ -77,7 +82,7 @@ override_dh_auto_configure:
 		../../configure ${COMMON_CONF_FLAGS}
 
 override_dh_auto_build:
-	$(MAKE) -C ${stdbuilddir} V=1 all
+	$(MAKE) -C ${stdbuilddir} V=1 $(JOBS) all
 ifeq (,$(filter pkg.e2fsprogs.no-static,$(DEB_BUILD_PROFILES)))
 	$(MAKE) -C ${stdbuilddir}/e2fsck V=1 e2fsck.static
 endif
@@ -194,7 +199,7 @@ override_dh_gencontrol:
 
 override_dh_auto_test:
 ifeq (,$(findstring nocheck,$(DEB_BUILD_OPTIONS)))
-	PRINT_FAILED=yes $(MAKE) -C ${stdbuilddir} V=1 check
+	PRINT_FAILED=yes $(MAKE) -C ${stdbuilddir} V=1 $(JOBS) check
 endif
 
 test_printenv:
