debian: adjust gbp.conf to build for bookworm-backports
Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -4,4 +4,4 @@ upstream-tag='v%(version)s'
 debian-branch=debian/backports
 
 [buildpackage]
-builder = sbuild -A -s -v -d bullseye-backports
+builder = sbuild -A -s -v -d bookworm-backports
