tune2fs: replace the -r option with -E revision=<fs-rev>
Revision 0 file systems are needed for compatibility with pre-1995
Linux kernels (older that version 1.2).  Other for testing and
computer science archoelogy, there are no valid reasons for using this
feature.  Revision 0 file systms do not support any file system
extensions beyond what was present in Linux 1.0 kernels, and only
support 128 byte inode sizes, which means that the file system will
only support file dates after the Unix epoch in 2038.

Users who use -r 0 are almost certainly doing so by mistake (for
example, perhaps they meant -m 0 but they typed -r 0 instead).  As a
result they get a very badly cripped file system that won't support
SELinux, post-2038 dates, on-line resizing, etc.  So remove the -r
option and replace it with the extended option "revision", to prevent
users from falling into this trap.

Addresses-Debian-Bug: #1086603
Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/misc/mke2fs.8.in
+++ b/misc/mke2fs.8.in
@@ -74,10 +74,6 @@ mke2fs \- create an ext2/ext3/ext4 file system
 .B \-q
 ]
 [
-.B \-r
-.I fs-revision-level
-]
-[
 .B \-E
 .I extended-options
 ]
@@ -405,6 +401,13 @@ to support a file system that has
 .I max-online-resize
 blocks.
 .TP
+.BI revision= fs-revision
+Specify the file system revision number.   Revision 0 file systems
+provide compatibility with pre-1.2 Linux kernels (dating from before
+1995).   This is only needed for testing or people who want to use
+very early, historical Linux systems.  The current default (supported
+by all modern Linux systems) is revision 1.
+.TP
 .BI root_owner [=uid:gid]
 Specify the numeric user and group ID of the root directory.  If no UID:GID
 is specified, use the user and group ID of the user running \fBmke2fs\fR.
@@ -720,12 +723,6 @@ the manual page
 Quiet execution.  Useful if
 .B mke2fs
 is run in a script.
-.TP
-.BI \-r " revision"
-Set the file system revision for the new file system.  Note that 1.2
-kernels only support revision 0 file systems.  The default is to
-create revision 1 file systems.
-.TP
 .B \-S
 Write superblock and group descriptors only.  This is an extreme
 measure to be taken only in the very unlikely case that all of
