ext4.5, tune2fs.8: add documentation for the orphan_file feature
Add documentation for the orphan_file feature to the ext4(5) and
tune2fs(8) man pages.

Addresses-Debian-Bug: #1073062
Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/misc/ext4.5.in
+++ b/misc/ext4.5.in
@@ -245,6 +245,13 @@ This ext4 feature provides multiple mount protection (MMP).  MMP helps to
 protect the file system from being multiply mounted and is useful in
 shared storage environments.
 .TP
+.B orphan_file
+.br
+This ext4 feature fixes a potential scalability bottleneck for workloads
+that are doing a large number of truncate or file extensions in
+parallel.  It is supported by Linux kernels starting version 5.15, and
+by e2fsprogs starting with version 1.47.0.
+.TP
 .B project
 .br
 This ext4 feature provides project quota support. With this feature,
