Fix continuous integration testing workflow on Windows with mingw64
The subs Makefile target has been renamed to top-deps

Fixes: 3c8d4f6e0183 ('Fix parallel "make -j install"')
Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -142,7 +142,7 @@ jobs:
     # dependencies: all libraries except libss.  The build system doesn't want
     # to build just those parts, though, so do it one step at a time...
     - run: ./configure CFLAGS="$DEF_CFLAGS"
-    - run: make -j8 subs V=1 CFLAGS_WARN="-Werror"
+    - run: make -j8 top-deps V=1 CFLAGS_WARN="-Werror"
     - run: make -j8 -C lib/et/ all V=1 CFLAGS_WARN="-Werror"
     - run: make -j8 -C lib/uuid/ all V=1 CFLAGS_WARN="-Werror"
     - run: make -j8 -C lib/blkid/ all V=1 CFLAGS_WARN="-Werror"
