--- a/misc/fuse2fs.1.in
+++ b/misc/fuse2fs.1.in
@@ -53,6 +53,15 @@ do not replay the journal and mount the file system read-only
 .TP
 \fB-o\fR fuse2fs_debug
 enable fuse2fs debugging
+.TP
+.BR -o kernel
+Behave more like the kernel ext4 driver in the following ways:
+Allows processes owned by other users to access the filesystem.
+Uses the kernel's permissions checking logic instead of fuse2fs's.
+Enables setuid and device files.
+Note that these options can still be overridden (e.g.
+.I nosuid
+) later.
 .SS "FUSE options:"
 .TP
 \fB-d -o\fR debug
