fuse2fs: allow use of direct io for disk access
Allow users to ask for O_DIRECT for disk accesses so that block device
writes won't be throttled.  This should improve latency, but will put
a lot more pressure on the disk cache.

Signed-off-by: Darrick J. Wong <djwong@kernel.org>
Link: https://lore.kernel.org/r/174553065581.1161238.969038742323698265.stgit@frogsfrogsfrogs
Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/misc/fuse2fs.1.in
+++ b/misc/fuse2fs.1.in
@@ -62,6 +62,9 @@ Enables setuid and device files.
 Note that these options can still be overridden (e.g.
 .I nosuid
 ) later.
+.TP
+.BR -o direct
+Use O_DIRECT to access the block device.
 .SS "FUSE options:"
 .TP
 \fB-d -o\fR debug
